deployment-files/new-ben-vs.yaml
apiVersion: networking.istio.io/v1beta1     
kind: VirtualService 
metadata: 
  name: ytsai-vs
  namespace:  default
spec: 
  gateways: 
  - istio-gateway
  hosts: 
  - pyms2-wasm.dev.oci.a10networks.com 
  http: 
  - match: 
    - headers: 
        host: 
          exact: pyms2-wasm.dev.oci.a10networks.com 
    route: 
    - destination: 
        host: pyms2-wasm.ytsai.svc.cluster.local 
        port: 
          number: 30034
